src/App.css
.App {
  display: grid;
  grid-template-columns: 10vw 1fr;
}

.main {
  padding: 4rem 1rem;
  min-height: 100vh;
}

table {
  width: 100%;
}

.sidebar {
  background-color: white;
  display: flex;
  flex-direction: column;
  font-size: 1.2rem;
}

.list {
  margin-top: 10vh;
}

.list-item {
  width: 100%;
  padding-left: 0.5rem;
}

.list-item:hover {
  background-color: #9dfab1;
}

.list-link {
  display: block;
  line-height: 4rem;
}

.order-row:hover {
  background-color: yellow;
}

.tableHeader {
  font-weight: bold;
}

.data {
  background-color: white;
  margin: 2rem 0;
  padding: 1rem;
}

.order__title {
  text-align: center;
}

.order__info {
  display: flex;
  justify-content: space-between;
}

.order__edits {
  display: flex;
  justify-content: space-evenly;
}

.order__addcomment,
.order__changestatus {
  display: flex;
  flex-direction: column;
}

button {
  border: none;
  background-color: purple;
  color: white;
  font-weight: bold;
  padding: 0.5rem;
  margin-top: 1rem;
}

textarea {
  width: 400px;
}

select {
  width: 400px;
  padding: 0.5rem;
}

